--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.profiles.active=dev
 user.firstnames=Thorsten,Simon
 
 spring.jpa.show-sql=true
+
+# Fehler transparent an den Client weiterreichen
+server.error.include-binding-errors=always
+server.error.include-message=always
+server.error.include-exception=true
