--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql=true
 server.error.include-binding-errors=always
 server.error.include-message=always
 server.error.include-exception=true
+
+management.endpoint.health.show-details=WHEN_AUTHORIZED
+
+management.endpoints.web.exposure.include=*
